--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>DB-V1.0</groupId>
   <artifactId>DBTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <name>DBTest</name>
 
   <dependencies>
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
-      <version>8.4.0</version>
+      <version>8.2.0</version>
     </dependency>
   </dependencies>
 
   <build>
+    <finalName>DBTest</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -24,6 +27,7 @@
           <target>17</target>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.6.0</version>
@@ -31,19 +35,19 @@
           <execution>
             <phase>package</phase>
             <goals><goal>single</goal></goals>
-            <configuration>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <archive>
-                <manifest>
-                  <mainClass>DBTest_Demo</mainClass>
-                </manifest>
-              </archive>
-              <finalName>DBTest</finalName>
-            </configuration>
           </execution>
         </executions>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>DBTest_Demo</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
