--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target/
 *.bak
 .DS_Store
 Thumbs.db
-# keep secrets out of git (safe for other levels)
+# keep secrets out of git (safe for L4 later)
 *.pem
 *.key
+
