Level 1 successful (Localhost, No SSL)

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ target/
 *.bak
 .DS_Store
 Thumbs.db
-# keep secrets out of git (safe for L4 later)
+# keep secrets out of git (safe for other levels)
 *.pem
 *.key
 
